# aptu-os

./: 0_Requirements.md  CommonErrorsAndPenalties.md  Concurrency_EratosthenesSieve.md  DeviceLoadModeling.md  FileSystem.md  MemoryAllocatorI.md  PR1_CommandInterpreter.md  ProjectHome.md  Schedule2.md  Scheduler1.md  SchedulersPlanningSamples.md  SelfCheck_deadlocks.md  ThreadsCollaborationBradobrey.md  ThreadsCollaborationLibrary.md  ThreadsCollaborationPhilosophs.md  TraceRoute.md  UsefulLinks.md  VirtualMemory.md
labs/: README
labs/1142/: README
labs/1142/1/: done
labs/1142/Bograchev.Alexey/: 1  2
labs/1142/Bograchev.Alexey/1.1/: comminterp.cpp  comminterp.cpp   comminterp.h  main.cpp  main.cpp 
labs/1142/Bograchev.Alexey/2.2/: main.cpp  makefile
labs/1142/Bograchev.Alexey/3.3/: main.cpp
labs/1142/Bondar.Andrey/1/: main.cpp  makefile
labs/1142/Bondar.Andrey/2/: makefile  ps.cpp  ps.h
labs/1142/Bondar.Andrey/3_block/: Makefile  client  client_main.cpp  server  server_main.cpp
labs/1142/Bondar.Andrey/4/: Allocator.h  allocator  main.cpp
labs/1142/Falzan.Vladislav/: 2
labs/1142/Falzan.Vladislav/1/: main.cpp
labs/1142/Falzan.Vladislav/2l/: main1.cpp  main2.cpp  makefile  ps.cpp  ps.h
labs/1142/Falzan.Vladislav/4/: alloc.cpp  makefile
labs/1142/Falzan.Vladislav/5/: client.cpp  makefile  serv.cpp  server.cpp
labs/1142/Falzan.Vladislav/6/: client.cpp  makefile
labs/1142/Gomelevskij/1/: comminterp.cpp  comminterp.h  done  main.cpp
labs/1142/Gomelevskij/2/: done  (+3 more)
labs/1142/Ivakhnitsky.Stas/: 1
labs/1142/Krasavin.Anatoliy/: client.cpp
labs/1142/Krestyaniniv.Kirill/: main.cpp
labs/1142/Pakharev.Sergey/: 4
labs/1142/Ziganshin.Denis/: 1.c
labs/2014/: README
labs/2014/Komarov.Alexandr/: main.cpp
labs/2014/Kryshchenko.Anton/: main.cpp
labs/2014/ovchinnikov.daniil/: .gitignore
labs/504/: README
labs/504/chigin.dmitrii/: Makefile  main.cpp  sh.cpp  sh.h
labs/504/fettser.yury/: main.cpp
labs/504/krivohatskiy.sergey/: README.MD
labs/504/tselovalnikov.sergey/01_shell/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
labs/504/tselovalnikov.sergey/01_shell/src/: Terminal.cpp  Terminal.h
labs/504/tselovalnikov.sergey/01_shell/src/cmds/: Cmd.h  CmdFactory.cpp  CmdFactory.h  EmptyCmd.cpp  EmptyCmd.h  ExecCmd.cpp  ExecCmd.h  ExitCmd.cpp  ExitCmd.h  HasArgsCmd.cpp  HasArgsCmd.h  KillCmd.cpp  KillCmd.h  LsCmd.cpp  LsCmd.h  PsCmd.cpp  PsCmd.h  PwdCmd.cpp  PwdCmd.h
labs/504/tselovalnikov.sergey/01_shell/src/utils/: FileUtils.h  ProcessUtils.cpp  StringUtils.h
labs/504/tselovalnikov.sergey/05_file_system/: .gitignore  .status  CMakeLists.txt  Makefile  test.sh
labs/504/tselovalnikov.sergey/05_file_system/src/: Context.h  FileSystem.h  INode.cpp  INode.h  main.cpp
labs/504/tselovalnikov.sergey/05_file_system/src/cmds/: copy.cpp  export.cpp  format.cpp  import.cpp  init.cpp  ls.cpp  mkdir.cpp  move.cpp  rm.cpp  test.cpp
labs/504/tselovalnikov.sergey/05_file_system/src/utils/: BinReader.h  BinWriter.h  FileUtils.h  ProcessUtils.h  StringUtils.h
labs/504/vesloguzova.alexandra/: .gitignore
labs/504/vesloguzova.alexandra/5/: .status  CMakeLists.txt  Makefile  copy.cpp  export.cpp  file_system.cpp  file_system.h  format.cpp  fs.cpp  fs.h  import.cpp  init.cpp  ls.cpp  mkdir.cpp  move.cpp  rm.cpp  util.cpp  util.h
labs/504/yurgin.pavel/: main.c  shell  util.h
labs/504/yurgin.pavel/06/: CMakeLists.txt  REPORT  TASK1_DATA  TASK2_DATA  makefile  sieve_multith  sieve_multith.cpp  sieve_multith.h  sieve_unith  sieve_unith.cpp  sieve_unith.h
samples/: scheduler1.txt  scheduler2.txt
samples/rr/: Makefile  list.cpp  list.h  main.cpp  task.cpp  task.h
(+1541 files in other folders)
